# DxCodeHandler

./: .gitignore  Converter.py  ICD10.py  ICD9.py  pyproject.toml
src/dxcodehandler/: Converter.py  ICD10.py  ICD9.py
src/dxcodehandler/data/icd9/: descendants.json  descriptions4.json
